# invoice-reconciliation

./: .gitignore  QUICKSTART.md  README.md  START_BACKEND.md  docker-compose.yml  main.py  postman_collection.json  pyproject.toml  requirements.txt  setup.sh  start_backend.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/graphql/: __init__.py  context.py  mutations.py  queries.py  schema.py
api/graphql/types/: __init__.py  bank_transaction.py  invoice.py  match.py  tenant.py
api/rest/: __init__.py  bank_transactions.py  invoices.py  matches.py  reconciliation.py  tenants.py
api/schemas/: bank_transaction.py  invoice.py  match.py  tenant.py
core/: config.py  database.py  exceptions.py  tenant.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
models/: __init__.py  database.py
repositories/: bank_transaction_repository.py  base.py  idempotency_repository.py  invoice_repository.py  match_repository.py  tenant_repository.py
services/: ai_explanation_service.py  bank_transaction_service.py  invoice_service.py  match_service.py  reconciliation_scorer.py  reconciliation_service.py  tenant_service.py
tests/: conftest.py  test_ai_explanation.py  test_bank_transactions.py  test_invoices.py  test_reconciliation.py  test_senior_requirements.py
